Modified doxygen build script, config, switched it to the Xcode directory, along with project files, other structural changes.

--- a/Doxyfile.config
+++ b/Doxyfile.config
@@ -1211,13 +1211,13 @@ DOCSET_BUNDLE_ID       = com.google.gumbo-query
 # The default value is: org.doxygen.Publisher.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-DOCSET_PUBLISHER_ID    = com.google.falven
+DOCSET_PUBLISHER_ID    = com.google
 
 # The DOCSET_PUBLISHER_NAME tag identifies the documentation publisher.
 # The default value is: Publisher.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-DOCSET_PUBLISHER_NAME  = falven
+DOCSET_PUBLISHER_NAME  = Google
 
 # If the GENERATE_HTMLHELP tag is set to YES then doxygen generates three
 # additional HTML index files: index.hhp, index.hhc, and index.hhk. The
