Modified to include gumbo-parser lib...

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,13 @@
 #
 ACLOCAL_AMFLAGS = -I m4
 
+AM_LDFLAGS = -llibgumbo
+
 # http://www.gnu.org/software/automake/manual/html_node/Libtool-Libraries.html
-lib_LTLIBRARIES = libgumboquery.la
-libgumboquery_la_CXXFLAGS = -Wall
-libgumboquery_la_LDFLAGS = -version-info 1:0:0 -no-undefined
-libgumboquery_la_SOURCES = \
+lib_LTLIBRARIES = libgumbo_query.la
+libgumbo_query_la_CXXFLAGS = -Wall
+libgumbo_query_la_LDFLAGS = -version-info 1:0:0 -no-undefined
+libgumbo_query_la_SOURCES = \
 src/Document.cpp \
 src/Document.h \
 src/Node.cpp \
@@ -25,7 +27,7 @@ include_HEADERS = src/Document.h src/Node.h
 
 noinst_PROGRAMS = main
 
-LDADD = libgumboquery.la
+LDADD = libgumbo_query.la
 
 AM_CPPFLAGS = -I"$(srcdir)/src"
 
