--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ ACLOCAL_AMFLAGS = -I m4
 # http://www.gnu.org/software/automake/manual/html_node/Libtool-Libraries.html
 lib_LTLIBRARIES = libgumbo_query.la
 libgumbo_query_la_CXXFLAGS = -Wall
-libgumbo_query_la_LDFLAGS = -llibgumbo
+libgumbo_query_la_LDFLAGS = -lgumbo
 libgumbo_query_la_SOURCES = \
 src/Document.cpp \
 src/Document.h \
