changed incorrect lib name from check

--- a/configure.ac
+++ b/configure.ac
@@ -13,7 +13,7 @@ AC_CONFIG_FILES([Makefile gumbo-query.pc])
 AC_PROG_CXX
 
 # Check for libraries.
-AC_CHECK_LIB([libgumbo])
+AC_CHECK_LIB([gumbo])
 
 # Check for header files.
 AC_CHECK_HEADERS([gumbo.h])
