--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,35 @@
-include(cmake/PreventInSourceBuilds.cmake)
-# include(cmake/ColorfulMessages.cmake)
-
 project(gumbo_query CXX)
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
+include(CTest)
+include(cmake/PreventInSourceBuilds.cmake)
+
+# Debug build.
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_BUILD_TYPE Debug)
 
+# Set our output directories.
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
-file(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
-file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
+# Create library directory if it does not exist.
+file(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+
+# Add the cmake modules directory to our module path.
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)
 find_package(Gumbo REQUIRED)
 
-add_subdirectory(src)
-add_subdirectory(tests)
+# Set our library source directory.
+set(gumbo_query_SOURCE_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
 
-##############################
-# 	   Generate Doxygen  	   #
-#		    Documentation.		   #
-##############################
+# Add source subdirectories.
+add_subdirectory(src)
+add_subdirectory(test)
+
+enable_testing()
+add_test(NAME "ID Test" COMMAND id_test)
+
+# Generate Doxygen documentation.
 set(DOXYGEN_CONFIG_FILE Doxyfile.d)
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
