--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(${gumbo_query_SOURCE_DIRECTORY})
 add_executable(test_id ID.cpp)
 
 set(tests test_id)
-target_link_libraries(${tests} gumbo_query)
+target_link_libraries(${tests} gumbo_query_shared)
 
 set_property(TARGET ${tests} PROPERTY CXX_STANDARD 11)
 set_property(TARGET ${tests} PROPERTY CXX_STANDARD_REQUIRED ON)
