Fixes cmake config errors/warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(gumbo_query CXX)
-cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
+cmake_policy(SET CMP0110 NEW)
 
 include(CTest)
 include(cmake/PreventInSourceBuilds.cmake)
